tests/NormalTests/paczka1/small_fuzzy/22778527.err
Error in line 7: RumZG A996 90,8
Error in line 8: RumZG S406 86,1
